[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mash-shell"
version = "0.1.5"
authors = [
  { name="voschezang", email="mark.voschezang@student.uva.nl" },
]
description = "A shell and other utils"
dynamic = ["dependencies", "readme"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: System :: Shells",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/voschezang/mash"
"Bug Tracker" = "https://github.com/voschezang/mash/issues"

[tool.setuptools.dynamic]
readme = {file = ["README.md", "SHELL.md", "SHELL_REFERENCE.md"]}
dependencies = {file = ["requirements.txt"]}
